--- a/ny first commit.css
+++ b/ny first commit.css
@@ -3,3 +3,8 @@ div{
     padding: 10px;
     margin: 10px;
 }
+.crickert{
+    background-color: blanchedalmond;
+    padding: 10px;
+    margin: 10px;
+}
